<resources>
    <string name="app_name">The Bible in You</string>

    <string name="ad">Ad</string>
    <string name="align_center">Align center</string>
    <string name="align_left">Align left</string>
    <string name="align_right">Align right</string>
    <string name="allow">Allow</string>
    <string name="allow_appear_on_top_permission">Allow appear on top permission.</string>
    <string name="appear_on_top">Appear on top</string>
    <string name="bible">Bible</string>
    <string name="bible_lock_screen_is_running">The Bible in You is running.</string>
    <string name="bold">Bold</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="cancel">Cancel</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="colon">:</string>
    <string name="copy">Copy</string>
    <string name="dark_mode">Dark mode</string>
    <string name="deny">Deny</string>
    <string name="display">Display</string>
    <string name="display_after_unlocking">Display after unlocking</string>
    <string name="drag_to_unlock">Drag to unlock</string>
    <string name="draw_unlock_pattern">Draw unlock pattern.</string>
    <string name="enter_password_or_pin">Enter password or PIN.</string>
    <string name="enter_two_or_more_characters">Enter two or more characters.</string>
    <string name="enter_your_search_term">Enter your search term.</string>
    <string name="favorites">Favorites</string>
    <string name="font">Font</string>
    <string name="font_size">Font size</string>
    <string name="hide_notification_content_title">Hide Notification</string>
    <string name="hide_notification_content_text">To hide notification, tap here and uncheck \'Allow notifications\'.</string>
    <string name="highlights">Highlights</string>
    <string name="lock_screen">Lock screen</string>
    <string name="lock_setting">Lock setting</string>
    <string name="lock_type">Lock type</string>
    <string name="new_testament">New testament</string>
    <string name="no_bookmarks">No bookmarks.</string>
    <string name="no_highlights">No highlights.</string>
    <string name="no_favorites">No favorites.</string>
    <string name="no_results_found">No result found.</string>
    <string name="ok">OK</string>
    <string name="old_testament">Old testament</string>
    <string name="post_notifications">Post notifications</string>
    <string name="request_app_permissions">Request app permissions</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="share_the_app">Share the app</string>
    <string name="show_on_lock_screen">Show on lock screen</string>
    <string name="swipe_on_touch">Swipe on touch</string>
    <string name="text_alignment">Text alignment</string>
    <string name="translations">Translations</string>
    <string name="unlock_with_back_button">Unlock with back button</string>
    <string name="version">Version</string>
    <string name="write_review">Write review</string>

    <string name="scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>

    <string name="blind_screen_000">Due to security policy, it cannot be unlocked with the Home button.</string>

    <string name="format_bible_chapter" translatable="false">%s&#160;&#160;%d : %d</string>

    <string name="fragment_permission_rationale_dialog_000">To use all features of the app, you must allow the following permissions.</string>

    <string name="review_000">Thank you for your valuable review.</string>

    <string name="pattern_format_12_hour_000">EEE, MMMM d</string>
    <string name="pattern_format_12_hour_001">h:mm</string>
    <string name="pattern_format_12_hour_002">h:mm:ss</string>
</resources>