<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_recycler_view"
    android:clipChildren="false"
    android:clipToPadding="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_recycler_view"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar"
            android:elevation="0dp"
            android:theme="@style/Toolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/highlights"
            app:titleTextColor="@color/title_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_highlight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56dp"
            android:paddingEnd="@dimen/padding_0dp"
            android:paddingStart="@dimen/padding_12dp"
            android:visibility="invisible" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_verse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_behavior="@string/scrolling_view_behavior"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linear_layout_nothing_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:elevation="@dimen/elevation_8dp"
        android:gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="UseCompoundDrawables"
        tools:visibility="visible">

        <ImageView
            android:layout_width="@dimen/width_48dp"
            android:layout_height="@dimen/height_48dp"
            app:srcCompat="@drawable/ic_nothing_found_96px"
            app:tint="@color/nothing_found"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/no_highlights"
            android:textColor="@color/nothing_found"
            android:textSize="@dimen/text_size_24dp"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>