<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blind_screen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40000000">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linear_layout_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_48dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextClock
                    android:id="@+id/text_clock_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:format12Hour="@string/pattern_format_12_hour_002"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="@dimen/shadow_dx"
                    android:shadowDy="@dimen/shadow_dy"
                    android:shadowRadius="@dimen/shadow_radius"
                    android:textColor="#DEFFFFFF"
                    android:textSize="@dimen/text_size_64dp"
                    tools:text="9:41:00" />

                <TextClock
                    android:id="@+id/text_clock_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format12Hour="@string/pattern_format_12_hour_000"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="@dimen/shadow_dx"
                    android:shadowDy="@dimen/shadow_dy"
                    android:shadowRadius="@dimen/shadow_radius"
                    android:textColor="#DEFFFFFF"
                    android:textSize="@dimen/text_size_24dp"
                    tools:text="Fri, January 1" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_48dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:gravity="center"
                android:shadowColor="@color/shadow"
                android:shadowDx="@dimen/shadow_dx"
                android:shadowDy="@dimen/shadow_dy"
                android:shadowRadius="@dimen/shadow_radius"
                android:text="@string/blind_screen_000"
                android:textColor="#DEFFFFFF"
                android:textSize="@dimen/text_size_16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_72dp"
                android:gravity="center"
                android:shadowColor="@color/shadow"
                android:shadowDx="@dimen/shadow_dx"
                android:shadowDy="@dimen/shadow_dy"
                android:shadowRadius="@dimen/shadow_radius"
                android:text="@string/drag_to_unlock"
                android:textColor="#DEFFFFFF"
                android:textSize="@dimen/text_size_16dp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_layout_unlock"
            android:layout_width="@dimen/width_72dp"
            android:layout_height="@dimen/height_72dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:foreground="@drawable/ripple_unlock"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_unlock"
                android:layout_width="@dimen/width_56dp"
                android:layout_height="@dimen/height_56dp"
                android:layout_gravity="center"
                android:background="@drawable/oval_stroke"
                android:duplicateParentState="true"
                android:padding="@dimen/padding_12dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_unlock_90px"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>